[package]
name = "chat_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tracing-subscriber = "0.2.24"
tracing = "0.1.28"
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.8", features = ["codec"]}
futures = "0.3.17"